--- a/pages/_includes/base.njk
+++ b/pages/_includes/base.njk
@@ -4,18 +4,10 @@
   <meta charset="utf-8" />
   <title>{% if title %}{{ title }} | {% endif %}Grandpa's Turn – Hand-turned bowls by Peter Schleihauf</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/static/style.css" />
+  <link rel="stylesheet" href="{{ '/static/style.css' | url }}" />
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about/">About</a></li>
-      <li><a href="/faq/">FAQ</a></li>
-      <li><a href="/contact/">Contact</a></li>
-  </nav>
-  <div class="container">
-    {{ content | safe }}
-  </div>
+  {{ content | safe }}
+  <footer>&copy; 2023 Peter Schleihauf
 </body>
 </html>
