--- a/pages/_includes/navigation.njk
+++ b/pages/_includes/navigation.njk
@@ -1,8 +1,6 @@
-<nav>
-  <ul class="flow left">
-    <li><a href="{{ '/' | url }}">Home</a></li>
-    <li><a href="{{ '/about/' | url }}">About</a></li>
-    <li><a href="{{ '/faq/' | url }}">FAQ</a></li>
-    <li><a href="{{ '/contact/' | url }}">Contact</a></li>
-  </ul>
-</nav>
+<ul class="nav flow left unlist">
+  <li><a href="{{ '/' | url }}">Home</a></li>
+  <li><a href="{{ '/about/' | url }}">About</a></li>
+  <li><a href="{{ '/faq/' | url }}">FAQ</a></li>
+  <li><a href="{{ '/contact/' | url }}">Contact</a></li>
+</ul>
