--- a/pages/_includes/base.njk
+++ b/pages/_includes/base.njk
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>{% if title %}{{ title }} | {% endif %}Grandpa's Turn – Hand-turned bowls by Peter Schleihauf</title>
+  <title>
+    {%- if title %}{{ title }} | {% endif -%}
+    Grandpa's Turn – Hand turned bowls by Peter Schleihauf
+  </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="{{ '/static/style.css' | url }}" />
 </head>
