--- a/static/style.css
+++ b/static/style.css
@@ -21,21 +21,34 @@
   margin-left: var(--flow-space-h);
 }
 
-.boring-container {
+.container {
   margin: 0 auto;
+  max-width: 36em;
+}
+
+.boring.container {
   max-width: 28em;
   padding: 0 var(--flow-space-h);
   text-align: justify;
 }
 
-nav > ul {
+.unlist > li {
+  list-style-type: none;
+  display: block;
+}
+
+nav, ul.nav {
   display: flex;
+  justify-content: space-between;
+/*  width: 100%;*/
+}
+
+ul.nav {
   justify-content: center;
 }
 
-nav > ul > li {
-  list-style-type: none;
-  display: block;
+nav h1 {
+  flex-grow: 1;
 }
 
 h1 {
@@ -48,7 +61,35 @@ p:not(:first-of-type) {
 
 .the-grid {
   display: block;
-  max-width: 42em;
+  max-width: 100%;
+}
+
+[data-background-image] {
+  background-image: var(--im);
+  background-size: cover;
+}
+
+.bowls {
+/*  align-items: flex-start;*/
+  align-content: flex-start;
+  aspect-ratio: 1;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.bowls > li {
+  margin: 0.5%;
+  width: 10.111111%;
+/*  aspect-ratio: 1;*/
+}
+.bowls > li > a {
+  aspect-ratio: 1;
+  background: hsla(0, 0%, 0%, 0.3);
+  display: block;
+  width: 100%;
+}
+.bowls > li > a:hover {
+  background: hsla(0, 0%, 100%, 0.3);
 }
 
 footer {
