--- a/pages/index.njk
+++ b/pages/index.njk
@@ -11,27 +11,22 @@ layout: base
   {% set grid_width = 1200 %}
   {% set grid_height = 1194 %}
   {% set grid_aspect = grid_width / grid_height %}
-  <div
-    style="--im: url('{{ '/static/grid-sketch.jpg' | url }}')"
-    data-background-image
-    data-width="{{ grid_width }}"
-    data-height="{{ grid_height }}">
+  <div class="bowls-container">
+    <img
+      src="{{ '/static/grid-sketch.jpg' | url }}"
+      alt="81 hand-turned wooden bowls on a home-made 9x9 compartment shelf"
+      class="the-grid"
+      />
     <ol class="bowls unlist">
       {% for bowl in bowls %}
-        {% set x = loop.index0 % 9 %}
-        {% set y = loop.index0 // 9 %}
-        <li data-x="{{ x }}" data-y="{{ y }}">
+        <li>
           <a
-            href="{{ ('/bowl/' + loop.index) | url }}"
+            href="{{ ('/bowl/' + bowl.number) | url }}"
             title="oooo">
-            bowl #{{ loop.index }}
+            bowl #{{ bowl.number }}
           </a>
         </li>
       {% endfor %}
     </ol>
   </div>
-  {# <img
-    class="the-grid"
-    src=""
-    alt="81 hand-turned wooden bowls on a home-made 9x9 compartment shelf" /> #}
 </div>
