--- a/pages/index.njk
+++ b/pages/index.njk
@@ -8,21 +8,17 @@ layout: base
     {% include 'navigation.njk' %}
   </nav>
 
-  {% set grid_width = 1200 %}
-  {% set grid_height = 1194 %}
-  {% set grid_aspect = grid_width / grid_height %}
   <div class="bowls-container">
     <img
       src="{{ '/static/grid-sketch.jpg' | url }}"
       alt="81 hand-turned wooden bowls on a home-made 9x9 compartment shelf"
-      class="the-grid"
-      />
+      class="the-grid" />
     <ol class="bowls unlist">
       {% for bowl in bowls %}
         <li>
           <a
             href="{{ ('/bowl/' + bowl.number) | url }}"
-            title="oooo">
+            title="Bowl #{{ bowl.number }}">
             bowl #{{ bowl.number }}
           </a>
         </li>
