--- a/static/style.css
+++ b/static/style.css
@@ -110,6 +110,26 @@ p:not(:first-of-type) {
   transition: background 0.2s;
 }
 
+.bowl-overlay {
+  align-items: center;
+  background: hsla(0, 0%, 0%, 0.333);
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+}
+
+.overlay-content {
+  background: #fff;
+  border-radius: 0.5em;
+  box-shadow: 0.1em 0.2em 0.667em hsla(0, 0%, 0%, 0.333);
+  margin: 1em;
+  padding: 1em;
+}
+
 footer {
   margin-top: var(--flow-space);
   padding-top: var(--flow-space);
