--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,9 @@
 :root {
+  --bg: #faecd2;
   --flow-space: 1.5em;
   --flow-space-h: 1em;
   --text-sm: 0.75em;
+  background-color: var(--bg);
   font-size: 14pt;
   line-height: 1.5em;
 }
@@ -66,6 +68,7 @@ ul.actual > li {
 .the-grid {
   display: block;
   width: 100%;
+  height: auto;
 }
 
 .bowls-container {
@@ -91,13 +94,14 @@ ul.actual > li {
 }
 
 .bowls {
+  box-shadow: 0 0 1.1em 1.1em var(--bg) inset;
   display: grid;
   grid-gap: 1%;
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(9, 1fr);
   height: 100%;
   left: 0;
-  padding: 2.2% 1.7% 1.5% 2%;
+  padding: 1.9em 2em 2.1em 1.9em;
   position: absolute;
   top: 0;
   width: 100%;
@@ -162,8 +166,9 @@ ul.actual > li {
 }
 
 footer {
+  color: #666;
+  font-size: var(--text-sm);
   margin-top: var(--flow-space);
   padding-top: var(--flow-space);
   text-align: center;
-  font-size: var(--text-sm);
 }
