hackier image build

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -10,10 +10,8 @@ layout: base
 
 
   <div class="bowls-container">
-    {% image './static/images/grid.tiff',
+    {% image 'images/grid.tiff',
              '81 hand-turned wooden bowls on a home-made 9x9 compartment shelf',
-             [600],
-             'x',
              'the-grid' %}
     <ol class="bowls unlist">
       {% for bowl in bowls %}
