--- a/pages/bowl.njk
+++ b/pages/bowl.njk
@@ -10,6 +10,9 @@ eleventyComputed:
 ---
 
 <h1>{{ title }}</h1>
+{% image 'bowls.' + bowl.number + '.0.overlay',
+         '81 hand-turned wooden bowls on a home-made 9x9 compartment shelf',
+         'the-grid' %}
 <dl>
   <dt>date</dt>
   <dd>{{ bowl.date }}</dd>
