--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,6 @@
 nav, ul.nav {
   display: flex;
   justify-content: space-between;
-/*  width: 100%;*/
 }
 
 ul.nav {
@@ -108,24 +107,37 @@ ul.actual > li {
 }
 
 .bowls > li > a {
-  background: hsla(0, 0%, 0%, 0.3);
+/*  background: hsla(0, 0%, 0%, 0.3);*/
   display: block;
   width: 100%;
   height: 100%;
+  position: relative;
   transition: background 0.2s;
 }
-.bowls > li > a:hover {
-  background: var(--bg);
-  opacity: 0.3;
-  transition: background 0.2s, opacity 0.2s;
+.bowls > li > a:before {
+  --blur: 0.4em;
+  background: #fff;
+  bottom: var(--blur);
+  box-shadow: 0 0 var(--blur) var(--blur) #fff;
+  content: '';
+  display: block;
+  left: var(--blur);
+  opacity: 0;
+  position: absolute;
+  right: var(--blur);
+  top: 1em;
+  transition: opacity 0.2s;
 }
-.bowls > li > a:target {
-  background: hsla(0, 0%, 100%, 0.5);
+.bowls > li > a:hover:before {
+  opacity: 0.4;
+}
+.bowls > li > a:target:before {
+  opacity: 0.5;
 }
 
 .bowl-overlay {
   align-items: center;
-  background: hsla(0, 0%, 0%, 0.333);
+  background: hsla(0, 0%, 0%, 0.5);
   display: flex;
   height: 100vh;
   justify-content: center;
