more boring app container id

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -30,5 +30,5 @@ layout: base
     </ol>
   </div>
 </div>
-<div id="hi-app"></div>
+<div id="overlay-app"></div>
 <script src="{{ '/static/overlay.js' | url }}"></script>
