targets for bowls 80 and 81 in the right spots

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -15,7 +15,7 @@ layout: base
              'the-grid' %}
     <ol class="bowls unlist">
       {% for bowl in bowls %}
-        <li>
+        <li data-bowl="{{ bowl.number }}">
           <a
             id="{{ bowl.number }}"
             href="{{ ('/bowl/' + bowl.number + '/') | url }}"
