--- a/pages/index.njk
+++ b/pages/index.njk
@@ -2,32 +2,31 @@
 layout: base
 ---
 
-<div class="container">
-  <nav>
-    <h1>Grandpa's Turn</h1>
-    {% include 'navigation.njk' %}
-  </nav>
+<nav class="over-grid">
+  <h1>Grandpa's Turn</h1>
+  {% include 'navigation.njk' %}
+</nav>
 
-  <div class="bowls-container">
-    {% image 'grid.grid',
-             '81 hand-turned wooden bowls on a home-made 9x9 compartment shelf',
-             'the-grid' %}
-    <ol class="bowls unlist">
-      {% for bowl in bowls %}
-        <li data-bowl="{{ bowl.number }}">
-          <a
-            id="{{ bowl.number }}"
-            href="{{ ('/bowl/' + bowl.number + '/') | url }}"
-            title="Bowl #{{ bowl.number }}"
-            data-overlay-bowl="{{ bowl.number }}">
-            <span class="visually-hidden focusable">
-              bowl #{{ bowl.number }}
-            </span>
-          </a>
-        </li>
-      {% endfor %}
-    </ol>
-  </div>
+<div class="container grid">
+  {% image 'grid.grid',
+           '81 hand-turned wooden bowls on a home-made 9x9 compartment shelf',
+           'the-grid',
+           'grid-edge-fade' %}
+  <ol class="bowls unlist">
+    {% for bowl in bowls %}
+      <li data-bowl="{{ bowl.number }}">
+        <a
+          id="{{ bowl.number }}"
+          href="{{ ('/bowl/' + bowl.number + '/') | url }}"
+          title="Bowl #{{ bowl.number }}"
+          data-overlay-bowl="{{ bowl.number }}">
+          <span class="visually-hidden focusable">
+            bowl #{{ bowl.number }}
+          </span>
+        </a>
+      </li>
+    {% endfor %}
+  </ol>
 </div>
 <div id="overlay-app"></div>
 <script src="{{ '/static/overlay.js' | url }}"></script>
