--- a/pages/index.njk
+++ b/pages/index.njk
@@ -11,7 +11,7 @@ layout: base
   {% image 'grid.grid',
            '81 hand-turned wooden bowls on a home-made 9x9 compartment shelf',
            'the-grid',
-           'grid-edge-fade' %}
+           'grid-frame' %}
   <ol class="bowls unlist">
     {% for bowl in bowls %}
       <li data-bowl="{{ bowl.number }}">
