--- a/static/style.css
+++ b/static/style.css
@@ -23,6 +23,7 @@
   --grid-bleed-bottom: 28px;
   --grid-content-width: calc(var(--grid-image-width) - var(--grid-bleed-left) - var(--grid-bleed-right));
   --grid-content-height: calc(var(--grid-image-height) - var(--grid-bleed-top) - var(--grid-bleed-bottom));
+  --grid-h-margin: 24px;
 
   /* base styles */
   background-color: var(--bg);
@@ -51,10 +52,10 @@
 }
 
 .container.grid {
-  position: relative;
-  width: var(--grid-content-width);
   height: var(--grid-content-height);
   margin: 0.5em auto;
+  position: relative;
+  width: calc(2 * var(--grid-h-margin) + var(--grid-content-width));
 }
 
 .container.boring {
@@ -111,15 +112,14 @@ button.reset {
   cursor: inherit;
 }
 
-
-.grid-edge-fade {
+.grid-frame {
   display: block;
-  left: calc(-1 * var(--grid-bleed-left));
+  left: calc(-1 * var(--grid-bleed-left) + var(--grid-h-margin));
   position: absolute;
   top: calc(-1 * var(--grid-bleed-top));
   z-index: -1;
 }
-.grid-edge-fade:after {
+.grid-frame:after {
   bottom: 0;
   box-shadow: 0 0 1.1em 1.1em var(--bg) inset;
   content: "";
@@ -138,7 +138,7 @@ button.reset {
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(9, 1fr);
   height: 100%;
-  width: 100%;
+  padding: 0 var(--grid-h-margin);
 }
 
 .bowls > li[data-bowl="80"] {
@@ -331,8 +331,8 @@ button.move {
 footer {
   color: #666;
   font-size: var(--text-sm);
-  margin-top: var(--flow-space);
-  padding-top: var(--flow-space);
+  margin-top: 2em;
+  padding-top: 1em;
   text-align: center;
 }
 
