--- a/pages/bowl.njk
+++ b/pages/bowl.njk
@@ -14,11 +14,15 @@ eleventyComputed:
          '81 hand-turned wooden bowls on a home-made 9x9 compartment shelf',
          'the-grid' %}
 <dl>
-  <dt>date</dt>
-  <dd>{{ bowl.date }}</dd>
-  <dt>source</dt>
-  <dd>{{ bowl.source }}</dd>
-  <dt>feature</dt>
-  <dd>{{ bowl.feature }}</dd>
+  <dt>signed</dt>
+  <dd>{{ bowl.signed }}</dd>
+  <dt>species</dt>
+  <dd>{{ bowl.species }}</dd>
+  <dt>origin</dt>
+  <dd>{{ bowl.origin }}</dd>
+  <dt>finish</dt>
+  <dd>{{ bowl.finish }}</dd>
+  <dt>sense</dt>
+  <dd>{{ bowl.sense }}</dd>
 </dl>
-<p>{{ bowl.description }}
+<p>{{ bowl.description }}</p>
