--- a/pages/_includes/navigation.njk
+++ b/pages/_includes/navigation.njk
@@ -1,6 +1,7 @@
 <ul class="nav flow left unlist">
-  <li><a href="{{ '/' | url }}">Home</a></li>
-  <li><a href="{{ '/about/' | url }}">About</a></li>
-  <li><a href="{{ '/faq/' | url }}">FAQ</a></li>
-  <li><a href="{{ '/contact/' | url }}">Contact</a></li>
+  <li><a href="{{ '/' | url }}" class = "home nav-item">GRANDPA'S TURN</a></li>
+  {# <li><a href="{{ '/' | url }}">Home</a></li> #}
+  <li><a href="{{ '/about/' | url }}" class = "nav-item">ABOUT</a></li>
+  {# <li><a href="{{ '/faq/' | url }}">FAQ</a></li> #}
+  <li><a href="{{ '/contact/' | url }}" class = "nav-item">CONTACT</a></li>
 </ul>
