--- a/static/style.css
+++ b/static/style.css
@@ -231,6 +231,7 @@ button.reset {
   height: 100vh;
   justify-content: center;
   left: 0;
+  overflow: auto;
   padding: 1em;
   position: fixed;
   top: 0;
@@ -238,7 +239,7 @@ button.reset {
 }
 
 .overlay-size {
-  max-width: 768px;
+  max-width: min(768px, 100%);
 }
 
 .bowl-header {
@@ -345,7 +346,7 @@ button.move {
   display: block;
   height: auto;
   max-height: 80vh;
-  max-width: 420px;
+  max-width: min(100%, 420px);
   width: auto;
 }
 
@@ -354,7 +355,7 @@ button.move {
 }
 
 .bowl-images {
-  min-height: 318px;
+  flex-shrink: 1;
 }
 .bowl-info {
   font-size: var(--text-m);
@@ -374,11 +375,29 @@ button.move {
   margin: 1em 0;
   text-indent: 0;
 }
-.bowl-info a.continue {
+.bowl-info .continue {
   font-style: italic;
 }
 .bowl-info dl {
   grid-gap: 0.25em;
+}
+
+@media screen and (max-width: 420px) {
+  .bowl-detail {
+    flex-direction: column;
+  }
+  .bowl-info {
+    max-width: 100%;
+  }
+  .bowl-info .continue {
+    display: none;
+  }
+  .bowl-info.cut .description:after {
+    content: "…";
+  }
+  .bowl-info dl {
+    display: none;
+  }
 }
 
 /* /////// image detail ////// */
