--- a/static/style.css
+++ b/static/style.css
@@ -432,6 +432,22 @@ button.move {
   border-top: 1px solid hsla(var(--fh), var(--fs), var(--fl), 0.2);
 }
 
+@media screen and (max-width: 618px) {
+  .detail.images {
+    flex-shrink: 3;
+  }
+}
+@media screen and (max-width: 420px) {
+  .container.detail {
+    flex-direction: column-reverse;
+    margin-top: 4em;
+  }
+  .detail.text dl {
+    border-top-width: 0;
+    margin-top: 1em;
+  }
+}
+
 dl {
   padding: 0.5em 0;
   display: grid;
