--- a/pages/_includes/navigation.njk
+++ b/pages/_includes/navigation.njk
@@ -1,5 +1,6 @@
-<ul class="nav flow left unlist">
-  {# <li><a href="{{ '/' | url }}" class = "home nav-item">GRANDPA'S TURN</a></li> #}
+<a href="{{ '/' | url }}" class = "nav-item-home"> <img src ="static/images/logo-flat.png"></a>
+
+<ul class="nav unlist">
   {# <li><a href="{{ '/' | url }}">Home</a></li> #}
   <li><a href="{{ '/about/' | url }}" class = "nav-item">ABOUT</a></li>
   {# <li><a href="{{ '/faq/' | url }}">FAQ</a></li> #}
