--- a/static/style.css
+++ b/static/style.css
@@ -76,7 +76,9 @@
 
 .unlist > li {
   list-style-type: none;
-  display: block;
+  display: inline-block;
+  padding: 5px 8px;
+  position: relative;
 }
 
 nav, ul.nav {
@@ -94,6 +96,12 @@ nav.over-grid {
   margin: 1.333em auto;
   padding: 0 1.5em;
   width: var(--grid-content-width);
+  align-items: center;
+}
+
+nav.over-grid img{
+  width: 200px;
+  /* margin: auto; */
 }
 
 .nav-item {
