--- a/pages/contact.njk
+++ b/pages/contact.njk
@@ -3,4 +3,12 @@ layout: boring
 title: Contact
 ---
 
-<h1>{{ title }}</h1>
+<div class = "page-title">
+    <h1>{{ title }}</h1>
+</div>
+
+<div class = "page-text">
+<p><i>Thank you for your interest in Grandpa's Turn.</p>
+<br>
+<p>Any inquiries or comments can be sent to us by email: GrandpasTurn@schleihauf.ca
+</div>
