--- a/pages/bowl.njk
+++ b/pages/bowl.njk
@@ -8,6 +8,7 @@ permalink: "bowl/{{ bowl.number | slugify }}/"
 eleventyComputed:
     title: "Bowl #{{ bowl.number }}"
     og_image: "{% image_path 'bowls.' + bowl.number + '.0.overlay' %}"
+    og_description: "{{ bowl.description }}"
 ---
 
 <nav class="over-grid">
