add about content and fix logo link

--- a/pages/about.njk
+++ b/pages/about.njk
@@ -3,14 +3,42 @@ layout: boring
 title: About
 ---
 
-<h1>{{ title }}</h1>
+<div class = "page-title">
+    <h1>{{ title }}</h1>
+</div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor condimentum lacinia quis vel eros donec. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Pharetra magna ac placerat vestibulum. Id venenatis a condimentum vitae sapien pellentesque. Nunc sed id semper risus in hendrerit gravida. Sit amet risus nullam eget felis eget nunc lobortis mattis. Ut eu sem integer vitae justo eget magna fermentum. Lorem ipsum dolor sit amet consectetur adipiscing elit ut. Ultricies integer quis auctor elit sed vulputate mi.
+<p>
+    Grandpa's Turn is a legacy project carried on by Peter Schleihauf's children after his passing on February 26 of 2023. 
+    <p>A life-long red-seal carpenter who taught high school tech classes as his second career, 
+    Peter began creating the bowls in retirement after taking up woodturning at the encouragement of his second kid who signed him up 
+    for a woodturning club as a Christmas gift. 
+    
+    <p>While his family was aware that he wrote, he was fairly secretive about it, 
+    so the texts that are being added to this site were largely appreciated after he passed while the full vision behind Grandpa's Turn 
+    became clear to his two youngest kids as they worked on building the website. (His eldest will, though he might not know it yet, be 
+    recruited to edit the texts on this site, and support with the ongoing updates as the project progresses.)
 
-<p>Odio ut sem nulla pharetra. Nisl tincidunt eget nullam non nisi. Posuere ac ut consequat semper viverra nam libero justo. Cursus in hac habitasse platea dictumst quisque sagittis purus. Enim nec dui nunc mattis enim. Amet mauris commodo quis imperdiet. At auctor urna nunc id cursus metus. Id cursus metus aliquam eleifend mi in. Sit amet tellus cras adipiscing enim. Fusce id velit ut tortor pretium viverra suspendisse. Sit amet facilisis magna etiam. Nisi porta lorem mollis aliquam ut porttitor leo a. Mattis pellentesque id nibh tortor id aliquet lectus. Risus viverra adipiscing at in tellus integer feugiat scelerisque.
+    <p>Peter kept meticulous notes about his plans, often re-writing them as he refined ideas. Mixed in with technical considerations and process descriptions are his reflections on life, both political and artistic. 
+    As his kids sift through these ideas and directions, this website will be updated in order to carry forward his project and share his beautiful work 
+    and writings with the world beyond his display case.
 
-<p>Arcu bibendum at varius vel. Porttitor eget dolor morbi non arcu risus quis. Nullam eget felis eget nunc lobortis. Facilisis mauris sit amet massa vitae tortor. Nec dui nunc mattis enim ut. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Faucibus a pellentesque sit amet porttitor eget. Vulputate ut pharetra sit amet aliquam id diam maecenas. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Vel facilisis volutpat est velit egestas dui id ornare. Morbi tempus iaculis urna id. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas. Eu ultrices vitae auctor eu. Gravida arcu ac tortor dignissim convallis aenean. Odio morbi quis commodo odio.
+<p><i>
+”There are 81 turnings in this collection. 
+Each its own character; each its own wood. 
+Not smooth to a level where sanding is minimal and sometimes cracked only not to a level unusable. 
+Turnings are the result of 3-5” branches being halved and mounted to create a small live edge bowl. 
+Live edged bowls can be startlingly beautiful due to shape, wall thickness and finish. 
+Very safe, boiled linseed oil as a finish. Branches will come from native deciduous trees including fruit and exotics as catalpa. 
+Chestnut without the nut.” </i>
+<p> - a selection from Peter's plans for this project (unedited).
+<br>
+<br>
+<br>
 
-<p>Eu consequat ac felis donec et odio pellentesque diam volutpat. Turpis tincidunt id aliquet risus feugiat in ante metus. Vestibulum sed arcu non odio euismod lacinia at quis. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Viverra mauris in aliquam sem. Augue neque gravida in fermentum et sollicitudin ac orci. At tellus at urna condimentum mattis. Eget velit aliquet sagittis id consectetur purus ut faucibus pulvinar. Donec ultrices tincidunt arcu non sodales. Ac orci phasellus egestas tellus rutrum. Porta nibh venenatis cras sed felis eget velit. Rutrum quisque non tellus orci. Malesuada fames ac turpis egestas. Dolor sit amet consectetur adipiscing elit.
+<div class = "page-title">
+    <h1>About Peter</h1>
+</div>
 
-<p>Sit amet venenatis urna cursus eget nunc scelerisque viverra. Feugiat in ante metus dictum at tempor commodo ullamcorper a. Condimentum lacinia quis vel eros donec ac. Vitae turpis massa sed elementum tempus. Facilisi morbi tempus iaculis urna id volutpat lacus laoreet non. Aliquam nulla facilisi cras fermentum odio eu. Turpis egestas pretium aenean pharetra magna ac. Massa tincidunt nunc pulvinar sapien et ligula. Vestibulum mattis ullamcorper velit sed ullamcorper morbi. Imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Sed adipiscing diam donec adipiscing tristique risus nec feugiat in. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae. Id aliquet lectus proin nibh nisl condimentum id venenatis a. In ornare quam viverra orci sagittis. Purus non enim praesent elementum facilisis leo vel fringilla est. Justo laoreet sit amet cursus sit amet dictum.
+<p>
+Please read more about our beloved father <a href=https://pilonfamily.ca/tribute/details/2963/Peter-Schleihauf/obituary.html#tribute-start> in his obituary.</a>
+<p>
