--- a/pages/contact.njk
+++ b/pages/contact.njk
@@ -7,8 +7,8 @@ title: Contact
     <h1>{{ title }}</h1>
 </div>
 
-<div class = "page-text">
+{# <div class = "page-text"> #}
 <p><i>Thank you for your interest in Grandpa's Turn.</p>
 <br>
 <p>Any inquiries or comments can be sent to us by email: GrandpasTurn@schleihauf.ca
-</div>
+{# </div> #}
