photos and alt text

--- a/pages/_includes/base.njk
+++ b/pages/_includes/base.njk
@@ -17,6 +17,6 @@
 </head>
 <body>
   {{ content | safe }}
-  <footer>&copy; 2023 Peter Schleihauf
 </body>
+<footer> a legacy project in memory of Peter Schleihauf (1952-2023)
 </html>
