--- a/pages/about.njk
+++ b/pages/about.njk
@@ -42,3 +42,5 @@ Chestnut without the nut.” </i>
 <p>
 Please read more about our beloved father <a href=https://pilonfamily.ca/tribute/details/2963/Peter-Schleihauf/obituary.html#tribute-start> in his obituary.</a>
 <p>
+
+<img src ="{{ '/static/images/dad.jpeg' | url }}" alt= "Peter is smiling on a sunny day. There is water behind him. He is wearing a blue collared shirt">
