--- a/pages/_includes/navigation.njk
+++ b/pages/_includes/navigation.njk
@@ -1,4 +1,4 @@
-<a href="{{ '/' | url }}" class = "nav-item-home"> <img src ="{{ '/static/images/logo-flat.png' | url }}"></a>
+<a href="{{ '/' | url }}" class = "nav-item-home"> <img src ="{{ '/static/images/logo-flat.png' | url }}" alt = "Grandpa's Turn"></a>
 
 <ul class="nav unlist">
   <li><a href="{{ '/about/' | url }}" class = "nav-item">ABOUT</a></li>
