--- a/pages/contact.njk
+++ b/pages/contact.njk
@@ -10,5 +10,5 @@ title: Contact
 {# <div class = "page-text"> #}
 <p><i>Thank you for your interest in Grandpa's Turn.</p>
 <br>
-<p>Any inquiries or comments can be sent to us by email: GrandpasTurn@schleihauf.ca
+<p>Any inquiries or comments can be sent to us by email: <a href="mailto:GrandpasTurn@schleihauf.ca">GrandpasTurn@schleihauf.ca</a></p>
 {# </div> #}
