add basic privacy-focused visitor counting
dad would have wanted to know :p

--- a/pages/_includes/base.njk
+++ b/pages/_includes/base.njk
@@ -20,6 +20,7 @@
 </head>
 <body>
   {{ content | safe }}
+  <footer> a legacy project in memory of Peter Schleihauf (1952-2023)
+  <script data-goatcounter="https://p74hadeg.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
-<footer> a legacy project in memory of Peter Schleihauf (1952-2023)
 </html>
