--- a/pages/bowl.njk
+++ b/pages/bowl.njk
@@ -20,6 +20,17 @@ eleventyComputed:
     {% image 'bowls.' + bowl.number + '.0.overlay',
            '81 hand-turned wooden bowls on a home-made 9x9 compartment shelf',
            'detail image' %}
+    <div class="detail next-prev">
+      <a href="{{ pagination.href.previous }}" {% if not pagination.href.previous %}class="invisible"{% endif %}>
+        &lsaquo; Bowl {{ pagination.page.previous.number }}
+      </a>
+      <a href="{{ '/' | url }}" title="Home">
+        Home
+      </a>
+      <a href="{{ pagination.href.next }}" {% if not pagination.href.next %}class="invisible"{% endif %}>
+        Bowl #{{ pagination.page.next.number }} &rsaquo;
+      </a>
+    </div>
   </div>
   <div class="detail text">
     <h1>
