--- a/static/style.css
+++ b/static/style.css
@@ -153,7 +153,10 @@ font-weight:lighter;
     z-index: 1;
   }
   .container.grid {
-    margin-top: 3.5em;
+    margin-top: 7em;
+  }
+  .container.detail {
+    margin-top: 6em;
   }
   .container.boring {
     padding-top: 8em;
@@ -459,6 +462,16 @@ button.move {
   margin-top: 2.5em;
   border-top: 1px solid hsla(var(--fh), var(--fs), var(--fl), 0.2);
 }
+.detail .next-prev {
+  display: flex;
+  font-size: var(--text-m);
+  justify-content: space-between;
+  padding: 0.5em 1em;
+}
+.detail .next-prev > a {
+  color: inherit;
+  display: block;
+}
 
 @media screen and (max-width: 618px) {
   .detail.images {
@@ -468,7 +481,6 @@ button.move {
 @media screen and (max-width: 420px) {
   .container.detail {
     flex-direction: column-reverse;
-    margin-top: 4em;
   }
   .detail.text dl {
     border-top-width: 0;
@@ -535,4 +547,12 @@ footer {
   position: static;
   white-space: inherit;
   width: auto;
+}
+
+/*
+ * Hide visually and from screen readers, but maintain layout
+ */
+
+.invisible {
+  visibility: hidden;
 }
